--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:text="jack"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -61,6 +62,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:text="1234"
         app:layout_constraintStart_toStartOf="@+id/passwd"
         app:layout_constraintTop_toBottomOf="@+id/passwd" />
 
@@ -86,4 +88,14 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toTopOf="@+id/button" />
+
+    <CheckBox
+        android:id="@+id/cb_rem_userid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:text="記住帳號"
+        app:layout_constraintStart_toEndOf="@+id/userid"
+        app:layout_constraintTop_toTopOf="@+id/userid" />
 </androidx.constraintlayout.widget.ConstraintLayout>
